# v-trade

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.coolify.yaml  pyproject.toml  sources-predictionarena-polymarket.md
admin-dashboard/: package-lock.json  package.json  tsconfig.app.json
docs/: additional-findings.md  deferred-improvements.md  implementation-plan.md  implementation-status.md  owner-notes.md  polymarket-read-adapter.md  predictionarena-cycle-analysis.json  predictionarena-endpoint-profile.json  predictionarena-endpoints-report.json  predictionarena-pagination-probe.json  predictionarena-polymarket-endpoints.md  predictionarena-web-search-200-cycle-analysis.json  runtime-operations.md
migrations/: 0001_foundation.sql  0002_polymarket_read_model.sql  0003_paper_broker.sql  0004_model_research_harness.sql  0005_runtime_operations.sql  0006_private_admin.sql  0007_portfolio_pagination.sql  0008_actual_freeze_cutoff.sql  0009_frozen_fee_rates.sql  0010_exa_monthly_quota.sql  0011_private_runtime_and_strict_exa.sql  0012_code_versioned_definitions.sql  0013_code_versioned_prompts.sql  0014_exa_estimated_cost_semantics.sql  0015_belief_confidence_and_singleton_plans.sql  0016_market_fee_policy_parameters.sql
plans/: admin-dashboard.md  discovery-card-plan-review.md
scripts/: analyze_predictionarena_cycles.py  analyze_web_search_max.py  download_cycles.py  inspect_predictionarena_endpoints.py  pause.py  probe_predictionarena_pagination.py  profile_predictionarena_endpoints.py  record_polymarket_contracts.py
tests/: test_admin.py  (+34 more)
(+121 files in other folders)
